fixed course sidebar whitespace

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -3342,8 +3342,7 @@ li.avatar-list {
 .sidebar-block {
   float: left;
   width: 220px;
-  padding-bottom: 10px;
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 20px 0px;
   border-bottom: 1px dashed #ccc;
 }
 
@@ -3351,7 +3350,6 @@ li.avatar-list {
 .sidebar-block-last {
   float: left;
   width: 220px;
-  padding-bottom: 10px;
   padding: 10px 0px 10px 0px;
   border-bottom: 0px dashed #ccc;
   padding-bottom: 20px;
